slight code alterations

--- a/SecretaryPage.form
+++ b/SecretaryPage.form
@@ -373,7 +373,7 @@
                   <text value="Date of Birth:"/>
                 </properties>
               </component>
-              <component id="fe97e" class="javax.swing.JTextField" binding="dob">
+              <component id="fe97e" class="javax.swing.JTextField" binding="dob1">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -389,7 +389,7 @@
                   <text value="Contact No.:"/>
                 </properties>
               </component>
-              <component id="66412" class="javax.swing.JTextField" binding="contact">
+              <component id="66412" class="javax.swing.JTextField" binding="contact1">
                 <constraints>
                   <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -413,7 +413,7 @@
                       <text value="Plan:"/>
                     </properties>
                   </component>
-                  <component id="3fe80" class="javax.swing.JComboBox" binding="comboBox3" default-binding="true">
+                  <component id="3fe80" class="javax.swing.JComboBox" binding="comboBox3" custom-create="true" default-binding="true">
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
