populated combo boxes! (finally)

--- a/SecretaryPage.form
+++ b/SecretaryPage.form
@@ -150,7 +150,17 @@
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <model>
+                        <item value="--SELECT--"/>
+                        <item value="Blank"/>
+                        <item value="Checkup"/>
+                        <item value="Hygiene"/>
+                        <item value="Silver Filling"/>
+                        <item value="White Filling"/>
+                        <item value="Gold Crown"/>
+                      </model>
+                    </properties>
                   </component>
                   <component id="134be" class="javax.swing.JLabel">
                     <constraints>
@@ -198,7 +208,13 @@
                     <constraints>
                       <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <model>
+                        <item value="--SELECT--"/>
+                        <item value="Dentist"/>
+                        <item value="Hygienist"/>
+                      </model>
+                    </properties>
                   </component>
                   <hspacer id="23162">
                     <constraints>
@@ -417,7 +433,16 @@
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <model>
+                        <item value="--SELECT--"/>
+                        <item value="No Plan"/>
+                        <item value="NHS"/>
+                        <item value="Maintenance"/>
+                        <item value="Oral Health"/>
+                        <item value="Dental Repair"/>
+                      </model>
+                    </properties>
                   </component>
                   <grid id="c170c" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
