--- a/SecretaryPage.form
+++ b/SecretaryPage.form
@@ -25,7 +25,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="ace08" binding="panel1_2" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="ace08" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -61,7 +61,7 @@
                   </grid>
                 </children>
               </grid>
-              <grid id="54f0d" binding="panel1_1" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="54f0d" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -484,7 +484,7 @@
                       <text value="Plan:"/>
                     </properties>
                   </component>
-                  <component id="3fe80" class="javax.swing.JComboBox" binding="plan2" custom-create="true">
+                  <component id="3fe80" class="javax.swing.JComboBox" binding="plan2">
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -649,10 +649,11 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <labelFor value="b89ef"/>
                   <text value="Patient Number:"/>
                 </properties>
               </component>
-              <component id="b89ef" class="javax.swing.JTextField" binding="textField18" default-binding="true">
+              <component id="b89ef" class="javax.swing.JTextField" binding="patientID3">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -665,10 +666,11 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <labelFor value="dafcf"/>
                   <text value="First Name:"/>
                 </properties>
               </component>
-              <component id="dafcf" class="javax.swing.JTextField" binding="textField19" default-binding="true">
+              <component id="dafcf" class="javax.swing.JTextField" binding="firstName4">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -681,10 +683,11 @@
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <labelFor value="1977c"/>
                   <text value="Surname:"/>
                 </properties>
               </component>
-              <component id="1977c" class="javax.swing.JTextField" binding="textField20" default-binding="true">
+              <component id="1977c" class="javax.swing.JTextField" binding="surname4">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -700,7 +703,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="b9a21" class="javax.swing.JButton" binding="submitButton1" default-binding="true">
+                  <component id="b9a21" class="javax.swing.JButton" binding="editPatientSubmit">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
